--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -3,7 +3,7 @@ name: build-test-release
 on:
   push:
     branches: [ main ]
-    tags:  [ 'v*' ]
+    tags:    [ 'v*' ]
   pull_request:
     branches: [ main ]
 
@@ -41,8 +41,8 @@ jobs:
                           -p:TreatWarningsAsErrors=false `
                           --no-restore
 
-      # --- publish single-file CLI ---------------------------------------------
-      - name: Publish CLI (linux-x64 single-file)
+      # --- publish single‑file CLI --------------------------------------------
+      - name: Publish CLI (linux‑x64 single‑file)
         run: dotnet publish src/VipbJsonTool `
                             -c Release `
                             -r linux-x64 `
@@ -53,35 +53,46 @@ jobs:
                             --no-build `
                             -o publish/linux-x64
 
-      # --- PowerShell test prerequisites ---------------------------------------
+      # --- PowerShell test prerequisites --------------------------------------
       - name: Install Pester
         run: Install-Module Pester -Force -Scope CurrentUser
 
-      # --- Run CLI round-trip tests (VIPB & LVPROJ, all modes) -----------------
-      - name: Run CLI conversion tests (VIPB and LVPROJ round-trip)
+      # --- Run CLI round‑trip tests (LVPROJ only) ------------------------------
+      - name: Run CLI conversion tests (LVPROJ round‑trip)
         run: |
-          # VIPB legacy modes
-          dotnet run --project src/VipbJsonTool vipb2json tests/Samples/seed.vipb tests/tmp/seed.vipb.json
-          dotnet run --project src/VipbJsonTool json2vipb tests/tmp/seed.vipb.json tests/tmp/seed.vipb.roundtrip
+          New-Item -ItemType Directory -Force -Path tests/tmp | Out-Null
 
-          # LVPROJ new modes
-          dotnet run --project src/VipbJsonTool lvproj2json tests/Samples/seed.lvproj tests/tmp/seed.lvproj.json
-          dotnet run --project src/VipbJsonTool json2lvproj tests/tmp/seed.lvproj.json tests/tmp/seed.lvproj.roundtrip
+          # LVPROJ native modes
+          dotnet run --project src/VipbJsonTool lvproj2json `
+            tests/Samples/seed.lvproj tests/tmp/seed.lvproj.json
+          dotnet run --project src/VipbJsonTool json2lvproj `
+            tests/tmp/seed.lvproj.json tests/tmp/seed.roundtrip.lvproj
 
-          # Unified wrapper modes (should work identically)
-          dotnet run --project src/VipbJsonTool buildspec2json tests/Samples/seed.vipb tests/tmp/seed.vipb.json
-          dotnet run --project src/VipbJsonTool json2buildspec tests/tmp/seed.vipb.json tests/tmp/seed.vipb.roundtrip
-          dotnet run --project src/VipbJsonTool buildspec2json tests/Samples/seed.lvproj tests/tmp/seed.lvproj.json
-          dotnet run --project src/VipbJsonTool json2buildspec tests/tmp/seed.lvproj.json tests/tmp/seed.lvproj.roundtrip
+          # Unified wrapper modes (should work identically on LVPROJ)
+          dotnet run --project src/VipbJsonTool buildspec2json `
+            tests/Samples/seed.lvproj tests/tmp/seed.lvproj.json
+          dotnet run --project src/VipbJsonTool json2buildspec `
+            tests/tmp/seed.lvproj.json tests/tmp/seed.roundtrip.lvproj
 
-          # Optionally, diff original and roundtripped outputs (or use Pester scripts)
+          # -----------------------------------------------------------------------------
+          # The VIPB sample in the repo is *not* a real .vipb package (its root is <Project>),
+          # so these commands will always fail.  Uncomment once a valid VIPB file exists.
+          # -----------------------------------------------------------------------------
+          # dotnet run --project src/VipbJsonTool vipb2json `
+          #   tests/Samples/seed.vipb tests/tmp/seed.vipb.json
+          # dotnet run --project src/VipbJsonTool json2vipb `
+          #   tests/tmp/seed.vipb.json tests/tmp/seed.roundtrip.vipb
+          # dotnet run --project src/VipbJsonTool buildspec2json `
+          #   tests/Samples/seed.vipb tests/tmp/seed.vipb.json
+          # dotnet run --project src/VipbJsonTool json2buildspec `
+          #   tests/tmp/seed.vipb.json tests/tmp/seed.roundtrip.vipb
 
       # --- Run Pester tests ----------------------------------------------------
       - name: Run Pester tests (Basic and Golden Sample)
         run: |
           $failures = $false
-          $resultBasic = Invoke-Pester -Configuration @{
-            Run = @{ Path = 'tests/RoundTrip.Tests.ps1'; PassThru = $true }
+          $resultBasic  = Invoke-Pester -Configuration @{
+            Run = @{ Path = 'tests/RoundTrip.Tests.ps1';           PassThru = $true }
             TestResult = @{ Enabled = $true; OutputFormat = 'NUnitXml'; OutputPath = 'basic-test-results.xml' }
           }
           if ($resultBasic.FailedCount -gt 0) { $failures = $true }
@@ -92,17 +103,17 @@ jobs:
           if ($resultGolden.FailedCount -gt 0) { $failures = $true }
           if ($failures) { exit 1 }
 
-      # --- Upload Test Results --------------------------------------------------
+      # --- Upload Test Results -------------------------------------------------
       - name: Upload Test Results
-        if: always()    # always upload, even on failure or PR, for debugging
         uses: actions/upload-artifact@v4
         with:
           name: pester-test-results
           path: |
             basic-test-results.xml
             golden-sample-results.xml
+          if-no-files-found: warn
 
-      # --- Docker image build (for main branch and tags) -----------------------
+      # --- Docker build/publish (unchanged) ------------------------------------
       - name: Build Docker image
         run: docker build -t ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} .
 
@@ -120,14 +131,6 @@ jobs:
           docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:latest
           docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:v2
           docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:${{ github.ref_name }}
-
-      - name: Push Docker images
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
-        run: |
-          docker push ghcr.io/labview-community-ci-cd/seed:${{ github.sha }}
-          docker push ghcr.io/labview-community-ci-cd/seed:latest
-          docker push ghcr.io/labview-community-ci-cd/seed:v2
-          docker push ghcr.io/labview-community-ci-cd/seed:${{ github.ref_name }}
 
       # --- artifact upload (CLI binary) ----------------------------------------
       - name: Upload CLI artifact
