--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -15,126 +15,135 @@ jobs:
         shell: pwsh
 
     steps:
-      # --- source code ---------------------------------------------------------
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+    # -------------------------------------------------------------------------
+    # Source code
+    # -------------------------------------------------------------------------
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-      # --- .NET SDK ------------------------------------------------------------
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.0.x
-          cache: true
-          cache-dependency-path: |
-            **/*.csproj
-            **/*.sln
+    # -------------------------------------------------------------------------
+    # .NET SDK
+    # -------------------------------------------------------------------------
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 8.0.x
+        cache: true
+        cache-dependency-path: |
+          **/*.csproj
+          **/*.sln
 
-      # --- restore & build -----------------------------------------------------
-      - name: Restore packages
-        run: dotnet restore src/VipbJsonTool/VipbJsonTool.csproj
+    # -------------------------------------------------------------------------
+    # Restore & build
+    # -------------------------------------------------------------------------
+    - name: Restore packages
+      run: dotnet restore src/VipbJsonTool/VipbJsonTool.csproj
 
-      - name: Build (warnings ≠ errors)
-        run: dotnet build src/VipbJsonTool/VipbJsonTool.csproj `
+    - name: Build (warnings ≠ errors)
+      run: dotnet build src/VipbJsonTool/VipbJsonTool.csproj `
+                        -c Release `
+                        -p:TreatWarningsAsErrors=false `
+                        --no-restore
+
+    # -------------------------------------------------------------------------
+    # Publish single‑file CLI
+    # -------------------------------------------------------------------------
+    - name: Publish CLI (linux‑x64 single‑file)
+      run: dotnet publish src/VipbJsonTool `
                           -c Release `
+                          -r linux-x64 `
+                          --self-contained `
+                          -p:PublishSingleFile=true `
                           -p:TreatWarningsAsErrors=false `
-                          --no-restore
+                          --no-restore `
+                          --no-build `
+                          -o publish/linux-x64
 
-      # --- publish single‑file CLI --------------------------------------------
-      - name: Publish CLI (linux‑x64 single‑file)
-        run: dotnet publish src/VipbJsonTool `
-                            -c Release `
-                            -r linux-x64 `
-                            --self-contained `
-                            -p:PublishSingleFile=true `
-                            -p:TreatWarningsAsErrors=false `
-                            --no-restore `
-                            --no-build `
-                            -o publish/linux-x64
+    # -------------------------------------------------------------------------
+    # PowerShell test prerequisites
+    # -------------------------------------------------------------------------
+    - name: Install Pester
+      run: Install-Module Pester -Force -Scope CurrentUser
 
-      # --- PowerShell test prerequisites --------------------------------------
-      - name: Install Pester
-        run: Install-Module Pester -Force -Scope CurrentUser
+    # -------------------------------------------------------------------------
+    # Quick CLI smoke tests (LVPROJ + VIPB round‑trip)
+    # -------------------------------------------------------------------------
+    - name: Run CLI conversion tests (LVPROJ & VIPB round‑trip)
+      run: |
+        New-Item -ItemType Directory -Force -Path tests/tmp | Out-Null
 
-      # --- Run CLI round‑trip tests (LVPROJ only) ------------------------------
-      - name: Run CLI conversion tests (LVPROJ round‑trip)
-        run: |
-          New-Item -ItemType Directory -Force -Path tests/tmp | Out-Null
+        # ---------- LVPROJ native modes ----------
+        dotnet run --project src/VipbJsonTool lvproj2json `
+          tests/Samples/seed.lvproj tests/tmp/seed.lvproj.json
+        dotnet run --project src/VipbJsonTool json2lvproj `
+          tests/tmp/seed.lvproj.json tests/tmp/seed.roundtrip.lvproj
 
-          # LVPROJ native modes
-          dotnet run --project src/VipbJsonTool lvproj2json `
-            tests/Samples/seed.lvproj tests/tmp/seed.lvproj.json
-          dotnet run --project src/VipbJsonTool json2lvproj `
-            tests/tmp/seed.lvproj.json tests/tmp/seed.roundtrip.lvproj
+        # ---------- VIPB native modes ----------
+        dotnet run --project src/VipbJsonTool vipb2json `
+          tests/Samples/seed.vipb tests/tmp/seed.vipb.json
+        dotnet run --project src/VipbJsonTool json2vipb `
+          tests/tmp/seed.vipb.json tests/tmp/seed.roundtrip.vipb
 
-          # Unified wrapper modes (should work identically on LVPROJ)
-          dotnet run --project src/VipbJsonTool buildspec2json `
-            tests/Samples/seed.lvproj tests/tmp/seed.lvproj.json
-          dotnet run --project src/VipbJsonTool json2buildspec `
-            tests/tmp/seed.lvproj.json tests/tmp/seed.roundtrip.lvproj
+        # ---------- Unified wrapper modes ----------
+        dotnet run --project src/VipbJsonTool buildspec2json `
+          tests/Samples/seed.lvproj tests/tmp/seed.lvproj_bs.json
+        dotnet run --project src/VipbJsonTool json2buildspec `
+          tests/tmp/seed.lvproj_bs.json tests/tmp/seed.roundtrip_bs.lvproj
 
-          # -----------------------------------------------------------------------------
-          # The VIPB sample in the repo is *not* a real .vipb package (its root is <Project>),
-          # so these commands will always fail.  Uncomment once a valid VIPB file exists.
-          # -----------------------------------------------------------------------------
-          # dotnet run --project src/VipbJsonTool vipb2json `
-          #   tests/Samples/seed.vipb tests/tmp/seed.vipb.json
-          # dotnet run --project src/VipbJsonTool json2vipb `
-          #   tests/tmp/seed.vipb.json tests/tmp/seed.roundtrip.vipb
-          # dotnet run --project src/VipbJsonTool buildspec2json `
-          #   tests/Samples/seed.vipb tests/tmp/seed.vipb.json
-          # dotnet run --project src/VipbJsonTool json2buildspec `
-          #   tests/tmp/seed.vipb.json tests/tmp/seed.roundtrip.vipb
+        dotnet run --project src/VipbJsonTool buildspec2json `
+          tests/Samples/seed.vipb tests/tmp/seed.vipb_bs.json
+        dotnet run --project src/VipbJsonTool json2buildspec `
+          tests/tmp/seed.vipb_bs.json tests/tmp/seed.roundtrip_bs.vipb
 
-      # --- Run Pester tests ----------------------------------------------------
-      - name: Run Pester tests (Basic and Golden Sample)
-        run: |
-          $failures = $false
-          $resultBasic  = Invoke-Pester -Configuration @{
-            Run = @{ Path = 'tests/RoundTrip.Tests.ps1';           PassThru = $true }
-            TestResult = @{ Enabled = $true; OutputFormat = 'NUnitXml'; OutputPath = 'basic-test-results.xml' }
-          }
-          if ($resultBasic.FailedCount -gt 0) { $failures = $true }
-          $resultGolden = Invoke-Pester -Configuration @{
-            Run = @{ Path = 'tests/RoundTrip.GoldenSample.Tests.ps1'; PassThru = $true }
-            TestResult = @{ Enabled = $true; OutputFormat = 'NUnitXml'; OutputPath = 'golden-sample-results.xml' }
-          }
-          if ($resultGolden.FailedCount -gt 0) { $failures = $true }
-          if ($failures) { exit 1 }
+    # -------------------------------------------------------------------------
+    # Pester tests (Golden Sample only)
+    # -------------------------------------------------------------------------
+    - name: Run Pester Golden Sample tests
+      run: |
+        $result = Invoke-Pester -Configuration @{
+          Run        = @{ Path = 'tests/RoundTrip.GoldenSample.Tests.ps1'; PassThru = $true }
+          TestResult = @{ Enabled = $true; OutputFormat = 'NUnitXml'; OutputPath = 'golden-sample-results.xml' }
+        }
+        if ($result.FailedCount -gt 0) { exit 1 }
 
-      # --- Upload Test Results -------------------------------------------------
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v4
-        with:
-          name: pester-test-results
-          path: |
-            basic-test-results.xml
-            golden-sample-results.xml
-          if-no-files-found: warn
+    # -------------------------------------------------------------------------
+    # Upload Test Results
+    # -------------------------------------------------------------------------
+    - name: Upload Test Results
+      uses: actions/upload-artifact@v4
+      with:
+        name: pester-test-results
+        path: golden-sample-results.xml
+        if-no-files-found: warn
 
-      # --- Docker build/publish (unchanged) ------------------------------------
-      - name: Build Docker image
-        run: docker build -t ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} .
+    # -------------------------------------------------------------------------
+    # Docker build/publish (unchanged)
+    # -------------------------------------------------------------------------
+    - name: Build Docker image
+      run: docker build -t ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} .
 
-      - name: Docker login, tag & push
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_PAT }}
+    - name: Docker login, tag & push
+      if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_PAT }}
 
-      - name: Tag Docker images
-        if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
-        run: |
-          docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:latest
-          docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:v2
-          docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:${{ github.ref_name }}
+    - name: Tag Docker images
+      if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+      run: |
+        docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:latest
+        docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:v2
+        docker tag ghcr.io/labview-community-ci-cd/seed:${{ github.sha }} ghcr.io/labview-community-ci-cd/seed:${{ github.ref_name }}
 
-      # --- artifact upload (CLI binary) ----------------------------------------
-      - name: Upload CLI artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: vipb-json-cli-linux-x64
-          path: publish/linux-x64/VipbJsonTool
+    # -------------------------------------------------------------------------
+    # Upload CLI artifact
+    # -------------------------------------------------------------------------
+    - name: Upload CLI artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: vipb-json-cli-linux-x64
+        path: publish/linux-x64/VipbJsonTool
