Revert "Update build-test-release.yml"
This reverts commit 4d71286e77ab868739b1cdfa0e294d1e90156a59.

--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -1,110 +1,77 @@
-# ──────────────────────────────────────────────────────────────────────────────
-# RoundTrip.GoldenSample.Tests.ps1  ▶  self‑patching alias discovery
-# ──────────────────────────────────────────────────────────────────────────────
-param()
+name: build-test-release
 
-#####  helper functions ########################################################
-function ConvertTo-SnakeCase {
-    param([string]$Name)
-    $Name = $Name -replace '\.', '_'                    # dots → underscores
-    $Name = $Name -replace '([0-9a-z])([A-Z])', '$1_$2' # aB → a_B
-    $Name.ToLower()
-}
+on:
+  push:
+    branches: [ main ]
+    tags:  [ 'v*' ]
+  pull_request:
+    branches: [ main ]
 
-function Flatten-Object {
-    param($Obj)
-    $out = [ordered]@{}
-    function Recurse ($o,$p='') {
-        if ($o -is [pscustomobject]) {
-            foreach ($prop in $o.psobject.Properties) {
-                Recurse $prop.Value "$p$($prop.Name)."
-            }
-        }
-        elseif ($o -is [System.Collections.IEnumerable] -and $o -isnot [string]) {
-            return      # skip arrays for master file
-        }
-        else {
-            if ($p) {
-                $key       = ConvertTo-SnakeCase $p.TrimEnd('.')
-                $out[$key] = if ($null -eq $o) { '' } else { $o }
-            }
-        }
-    }
-    Recurse $Obj
-    return $out
-}
+jobs:
+  build-test:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: pwsh
 
-#####  pester ##################################################################
-Describe "Golden‑sample alias discovery" {
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    # -------------- shared variables (script‑scope) --------------------------
-    BeforeAll {
-        # file locations
-        $script:vipbFile   = "tests/Samples/seed.vipb"
-        $script:lvprojFile = "tests/Samples/seed.lvproj"
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+          cache: true
+          cache-dependency-path: |
+            **/*.csproj
+            **/*.sln
 
-        # release folder + outputs
-        $script:release     = "release"
-        $script:vipbYaml    = Join-Path $script:release "seed-vipb.yaml"
-        $script:lvprojYaml  = Join-Path $script:release "seed-lvproj.yaml"
+      - name: Restore .NET packages
+        run: dotnet restore src/VipbJsonTool/VipbJsonTool.csproj
 
-        if (Test-Path $script:release) { Remove-Item $script:release -Recurse -Force }
-        New-Item $script:release -ItemType Directory -Force | Out-Null
-    }
+      - name: Build .NET project
+        run: dotnet build src/VipbJsonTool/VipbJsonTool.csproj -c Release --no-restore -p:TreatWarningsAsErrors=false
 
-    It "extracts aliases & values from seed.vipb" {
-        try {
-            $vipbJson = Join-Path $script:release "seed.vipb.json"
-            & dotnet run --project src/VipbJsonTool/VipbJsonTool.csproj `
-                         --no-build -- buildspec2json `
-                         $script:vipbFile $vipbJson
-            if ($LASTEXITCODE) { throw "conversion failed (exit $LASTEXITCODE)" }
+      - name: Publish CLI (linux-x64 single-file)
+        run: dotnet publish src/VipbJsonTool -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true -p:TreatWarningsAsErrors=false --no-restore --no-build -o publish/linux-x64
 
-            $jObj      = Get-Content $vipbJson -Raw | ConvertFrom-Json
-            $flattened = Flatten-Object $jObj
+      - name: Install Pester
+        run: Install-Module Pester -Force -Scope CurrentUser
 
-            $yamlLines = foreach ($alias in $flattened.Keys) {
-                $v = $flattened[$alias]
-                if ([string]::IsNullOrWhiteSpace("$v")) { "${alias}:" }
-                else                                    { "${alias}: $v" }
-            }
-            Set-Content $script:vipbYaml $yamlLines -Encoding UTF8
-        }
-        catch {
-            Write-Host "Error extracting patchable fields from ${script:vipbFile}: $($_.Exception.Message)"
-            Write-Host "StackTrace:`n$($_.Exception.StackTrace)"
-            throw
-        }
+      - name: Run Golden Sample test (YAML generation)
+        run: |
+          $result = Invoke-Pester -Configuration @{
+            Run = @{ Path = 'tests/RoundTrip.GoldenSample.Tests.ps1'; PassThru = $true }
+            TestResult = @{ Enabled = $true; OutputFormat = 'NUnitXml'; OutputPath = 'golden-sample-results.xml' }
+          }
+          if ($result.FailedCount -gt 0) { exit 1 }
 
-        (Test-Path $script:vipbYaml)           | Should -BeTrue
-        (Get-Content $script:vipbYaml).Count   | Should -BeGreaterThan 0
-    }
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: golden-sample-test-results
+          path: golden-sample-results.xml
 
-    It "extracts aliases & values from seed.lvproj" {
-        try {
-            $lvprojJson = Join-Path $script:release "seed.lvproj.json"
-            & dotnet run --project src/VipbJsonTool/VipbJsonTool.csproj `
-                         --no-build -- buildspec2json `
-                         $script:lvprojFile $lvprojJson
-            if ($LASTEXITCODE) { throw "conversion failed (exit $LASTEXITCODE)" }
+      - name: Upload seed-vipb.yaml artifact
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: seed-vipb.yaml
+          path: release/seed-vipb.yaml
 
-            $jObj      = Get-Content $lvprojJson -Raw | ConvertFrom-Json
-            $flattened = Flatten-Object $jObj
+      - name: Upload seed-lvproj.yaml artifact
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: seed-lvproj.yaml
+          path: release/seed-lvproj.yaml
 
-            $yamlLines = foreach ($alias in $flattened.Keys) {
-                $v = $flattened[$alias]
-                if ([string]::IsNullOrWhiteSpace("$v")) { "${alias}:" }
-                else                                    { "${alias}: $v" }
-            }
-            Set-Content $script:lvprojYaml $yamlLines -Encoding UTF8
-        }
-        catch {
-            Write-Host "Error extracting patchable fields from ${script:lvprojFile}: $($_.Exception.Message)"
-            Write-Host "StackTrace:`n$($_.Exception.StackTrace)"
-            throw
-        }
-
-        (Test-Path $script:lvprojYaml)         | Should -BeTrue
-        (Get-Content $script:lvprojYaml).Count | Should -BeGreaterThan 0
-    }
-}
+      - name: Upload CLI artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: vipb-json-cli-linux-x64
+          path: publish/linux-x64/VipbJsonTool
