--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -51,7 +51,9 @@ jobs:
 
       - name: Publish CLI (LvprojJsonTool, linux-x64 single-file)
         run: dotnet publish src/LvprojJsonTool -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true -p:TreatWarningsAsErrors=false --no-restore --no-build -o publish/linux-x64
-
+      - name: Copy LvprojJsonTool binary to bin/ directory
+        run: Copy-Item -Path publish/linux-x64/LvprojJsonTool -Destination bin/
+        
       # --- Pester Test & Coverage ---
       - name: Install Pester
         run: Install-Module Pester -Force -Scope CurrentUser
