--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -39,9 +39,6 @@ jobs:
       - name: Publish CLI (VipbJsonTool, linux-x64 single-file)
         run: dotnet publish src/VipbJsonTool -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true --no-restore --no-build -o publish/linux-x64
 
-      - name: Copy published VipbJsonTool to bin
-        run: Copy-Item -Force publish/linux-x64/VipbJsonTool bin/
-
        # --- LvprojJsonTool Build/Publish ---
       - name: Restore .NET packages (LvprojJsonTool)
         run: dotnet restore src/LvprojJsonTool/LvprojJsonTool.csproj
@@ -51,9 +48,18 @@ jobs:
 
       - name: Publish CLI (LvprojJsonTool, linux-x64 single-file)
         run: dotnet publish src/LvprojJsonTool -c Release -r linux-x64 --self-contained -p:PublishSingleFile=true -p:TreatWarningsAsErrors=false --no-restore --no-build -o publish/linux-x64
-      - name: Copy LvprojJsonTool binary to bin/ directory
-        run: Copy-Item -Path publish/linux-x64/LvprojJsonTool -Destination bin/
-        
+
+      - name: Ensure bin/ directory exists and is writeable
+        run: |
+          mkdir -p bin
+          chmod 777 bin
+
+      - name: Copy published VipbJsonTool to bin
+        run: Copy-Item -Force publish/linux-x64/VipbJsonTool bin/
+
+      - name: Copy LvprojJsonTool binary to bin/
+        run: Copy-Item -Force publish/linux-x64/LvprojJsonTool bin/
+
       # --- Pester Test & Coverage ---
       - name: Install Pester
         run: Install-Module Pester -Force -Scope CurrentUser
