--- a/.github/workflows/build-test-release.yml
+++ b/.github/workflows/build-test-release.yml
@@ -65,9 +65,11 @@ jobs:
       # --- Pester Test & Coverage ---
       - name: Install Pester
         run: Install-Module Pester -Force -Scope CurrentUser
-      
-      - name: Ensure /usr/local/bin in PATH
-        run: $env:PATH += ':/usr/local/bin'
+
+      - name: Add /usr/local/bin to PATH
+        shell: pwsh
+        run: |
+          echo "/usr/local/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Run all Pester tests with coverage
         run: |
